# vcharather_chat

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: chat_window.py  client.py  dialog.py  dialog.qss  live2dwidget.py  resource.py  sound.py
